<resources>
    <string name="app_name">NotePlus</string>
    <string name="guardar">Guardar</string>
    <string name="nome_login">Nome</string>
    <string name="password_login">Password</string>
    <string name="login">Login</string>
    <string name="sem_conta">Não tem uma conta? Registe-se aqui</string>
    <string name="logo">Logo da aplicação</string>
    <string name="nome">Nome</string>
    <string name="registo_realizado_com_sucesso">Registo realizado com sucesso!</string>
    <string name="erro_ao_fazer_o_registo">Erro ao fazer o registo: %1$s</string>
    <string name="adicionar_nota">Adicionar nota</string>
    <string name="escreva_um_t_tulo">Escreva um título</string>
    <string name="escreva_uma_descri_o">Escreva uma descrição</string>
    <string name="foto_da_nota">Foto da Nota</string>
    <string name="tirar_foto">Tirar Foto</string>
    <string name="gravar_udio">Gravar Áudio</string>
    <string name="ouvir_udio">Ouvir Áudio</string>
    <string name="guardar_nota">Guardar nota</string>
    <string name="editar_nota">Editar nota</string>
    <string name="escreva_um_titulo">Escreva um titulo</string>
    <string name="escreva_uma_descri_o_edit">Escreva uma descrição</string>
    <string name="foto_da_nota_edit">Foto da Nota</string>
    <string name="ouvir_audio_edit">Ouvir Áudio</string>
    <string name="voltar">Voltar</string>
    <string name="editfab">editFab</string>
    <string name="image">image</string>
    <string name="n_o_existem_notas">Não existem notas</string>
    <string name="login_login">Login</string>
    <string name="titulo">Titulo</string>
    <string name="descri_o">Descrição</string>
    <string name="foto_da_nota_note">Foto da Nota</string>
    <string name="marcar_como_conclu_do">Marcar como concluído</string>
    <string name="password">Password</string>
    <string name="confirmar_password">Confirmar Password</string>
    <string name="registo">Registo</string>
    <string name="logo_da_app">Logo da App</string>
    <string name="j_tem_uma_conta_clique_aqui">Já tem uma conta? Clique aqui</string>
    <string name="registar">Registar</string>
    <string name="guardar_altera_es">Guardar alterações</string>
    <string name="guardar_nota_add">Guardar Nota</string>
    <string name="guardar_as_altera_es">Guardar as alterações</string>
    <string name="about_us">Sobre o projeto</string>
    <string name="course_info">Este trabalho foi desenvolvido por dois estudantes do Instituto Politécnico de Tomar, do curso de Engenharia Informática, para a unidade curricular de Desenvolvimento de Aplicações Móveis, no ano letivo de 2024/2025.</string>
    <string name="info_sobre_autores">Jorge Escarameia - Nº2287\nGuilherme Simões - Nº25259</string>
    <string name="bibliotecas">Bibliotecas utilizadas:\n\n- AndroidX\n\n- Material Components (Botões do Google Material Design)\n\n- Navigation Component (Usado para a navegação entre páginas)\n\n- Retrofit (Para comunicação com a API)\n\n- Gson (Para a conversão de JSON)</string>
    <string name="sobre_o_projeto">Sobre o projeto</string>
    <string name="voltar_para_o_login">Voltar para o login</string>
</resources>