<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment"
        android:padding="12dp">

        <!-- Logo da aplicação -->
        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/logo" />

        <!-- Título "Login" -->
        <TextView
            android:id="@+id/loginHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="Login"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:textSize="35sp" />

        <!-- Formulário do Login -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginHeading"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/loginNome"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/nome_login"
                android:padding="12dp"
                android:textSize="20sp"
                android:background="@drawable/purple_border"
                android:maxLines="1" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/password_login"
                android:padding="12dp"
                android:textSize="20sp"
                android:background="@drawable/purple_border"
                android:layout_marginTop="12dp"
                android:maxLines="1"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:backgroundTint="@color/purple"
                android:background="@drawable/rounded_ripple_button_background" />

            <TextView
                android:id="@+id/registerLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sem_conta"
                android:textColor="@color/purple"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>
    </RelativeLayout>
</layout>
