<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutFragment"
        android:padding="16dp">

        <!-- ScrollView para permitir rolagem do conteúdo -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/aboutHeading"
            android:layout_alignParentBottom="true"
            tools:ignore="NotSibling">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:elevation="5dp">

                <!-- Título da página -->
                <TextView
                    android:id="@+id/aboutHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/about_us"
                    android:textStyle="bold"
                    android:textColor="@color/purple"
                    android:textSize="32sp"
                    android:shadowRadius="3"
                    android:shadowDx="1"
                    android:shadowDy="1" />

                <!-- Informações sobre o projeto -->
                <TextView
                    android:id="@+id/courseInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/course_info"
                    android:textSize="18sp"
                    android:textColor="@color/purple"
                    android:padding="12dp"
                    android:gravity="fill"
                    android:background="@drawable/purple_border"
                    android:layout_marginBottom="40dp" />

                <TextView
                    android:id="@+id/authorsInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_sobre_autores"
                    android:textSize="18sp"
                    android:textColor="@color/purple"
                    android:padding="12dp"
                    android:gravity="fill"
                    android:background="@drawable/purple_border"
                    android:layout_marginBottom="40dp" />

                <TextView
                    android:id="@+id/librariesInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bibliotecas"
                    android:textSize="18sp"
                    android:textColor="@color/purple"
                    android:background="@drawable/purple_border"
                    android:padding="12dp"
                    android:gravity="fill" />

                <Button
                    android:id="@+id/BackTologinButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voltar_para_o_login"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/purple"
                    android:background="@drawable/rounded_ripple_button_background"
                    android:padding="12dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</layout>
